add image to 404 page

--- a/404.md
+++ b/404.md
@@ -3,8 +3,8 @@ permalink: /404.html
 ---
 
 # Error 404
-
-### Oops! Looks like this page doesn't exist
+![lost page](images/ABC_Mochizuki_Beckert.jpg)
+### Oops! Looks like this page doesn't exist.
 
 If you feel something is missing that should be here, <a href="mailto:{{ site.email }}">contact me</a>.
 
