Fix ggroups background

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -80,6 +80,8 @@ It is okay if you feel confused while learning something. Luckily for us, there 
 Below you can see a history of previous announcements that are not discussion section specific.
 
 <iframe id="forum_embed"
+  allowtransparency="true" 
+  style="background: #f8f8f8;"
   src="javascript:void(0)"
   scrolling="no"
   frameborder="0"
