--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -5,7 +5,7 @@ title: Calculus I
 class: class
 ---
 
-# MATH 221: Calculus and Analytic Geometry I
+# MATH 221: Calculus and Analytic Geometry I (DISC 429 and 431)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
 #### **Office Hours:**  3:30-4:30 PM Thursdays and 1:15-2:15 PM on Fridays (CST)
@@ -64,14 +64,16 @@ I intend to run everything via Zoom, but am still working on the details. At the
 
 ## Resources
 
-It is okay if you feel confused while learning something. Luckily for us, there are many great resources for the modern calculus student. 
+It is okay if you get confused. Luckily for us, there are many great resources for the modern calculus student. 
 
 - Your fellow classmates should be your primary resource. Post to [Piazza](https://piazza.com/class/ked7uy10ib47n3) as yourself or anonymously to discuss material with the people that are learning it at the same time as you.
 - [3blue1brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw) is an amazing source for *intuition* about all sorts of things. His exposition and animations are really polished. Absorb the [Essence of Calculus](https://www.youtube.com/watch?v=WUvTyaaNkzM&list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr) series and you'll be off to a great start.
 - [Paul's Online Notes](https://tutorial.math.lamar.edu/classes/calci/calci.aspx) are very clear and have worked out examples and practice problems. His notes are good at getting to the *practical* things you need to know to solve problems.
+- [Professor Leonard](https://www.youtube.com/channel/UCoHhuummRZaIVX7bD4t2czg) basically taught me all of Calculus 3. He also inspires me to work out. Seriously, check him out.
 - [WolframAlpha](https://www.wolframalpha.com/) can compute answers to essentially any calculus query that you enter, although the free version will not provide worked out solutions. Fortunately, UW Madison provides [a license to Mathematica](https://software.wisc.edu/cgi-bin/ssl/csl_download.cgi) which properly contains WolframAlpha.
 - Feel free to go to the [TA office hours](https://canvas.wisc.edu/courses/212363/pages/office-hours?module_item_id=2833122) of anyone available, not just mine!
 - Need some more math help? See the department page for [tutoring and learning options](https://www.math.wisc.edu/undergraduate/tutoring).
+  - In particular, consider going to [Mathlab](https://www.math.wisc.edu/undergraduate/mathlab)!
 - Need math major advising? See the department page for [advising](https://www.math.wisc.edu/undergraduate/advising).
 
  
