Zoom button fixed.

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -21,7 +21,7 @@ I intend to run everything via Zoom, but am still working on the details. At the
     <i class="fas fa-book"></i>
     Book
     </a>
-    <a href="" class="button" style="margin:5px">
+    <a href="https://uwmadison.zoom.us/j/95073751731?pwd=M0lHY1p4aXJHR3pWZjJhNG9wK3RSZz09" class="button" style="margin:5px">
     <i class="fas fa-video"></i>
     Zoom
     </a>
