Revert "bump donw"
This reverts commit cd5a3dfe894be7756a7f22de635e1eb97fc32137.

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -8,7 +8,7 @@ class: class
 # MATH 221: Calculus and Analytic Geometry I (DISC 429 and 431)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  3:30-4:30 PM Thursdays and 1:15-2:15 PM Fridays (CST)
+#### **Office Hours:**  3:30-4:30 PM Thursdays and 1:15-2:15 PM on Fridays (CST)
 
 ## Essential Information
 
