--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -33,33 +33,33 @@ I intend to run everything via Zoom, but am still working on the details. At the
 | Date | Topic | Worksheet |  Solutions |
 | :--------- | :---------  | :-----  | :---- |
 | Thursday, September 3   | Precalculus Review | Worksheet 1 | Solutions  | 
-| Tuesday, September 8 | TBA | Worksheet 2 | Solutions | 
-| Thursday, September 10 | TBA | Worksheet 3 | Solutions  | 
-| Tuesday, September 15| TBA | Worksheet 4 | Solutions | 
-| Thursday, September 17| TBA | Worksheet 5 | Solutions |
-| Tuesday, September 22| TBA | Worksheet 6 | Solutions |
-| Thursday, September 24 | TBA | Worksheet 7 | Solutions |
-| Tuesday, September 29 | TBA | Worksheet 8 | Solutions |
-| Thursday, October 1| TBA | Worksheet 9 | Solutions |
-| Tuesday, October 6 | TBA | Worksheet 10 | Solutions |
-| Thusday, October 8 | TBA | Worksheet 11 | Solutions |
-| Tuesday, October 13 | TBA | Worksheet 12 | Solutions |
-| Thursday, October 15 | TBA | Worksheet 13 | Solutions |
-| Tuesday, October 20 | TBA | Worksheet 14 | Solutions |
-| Thursday, October 22 | TBA | Worksheet 15 | Solutions |
-| Tuesday, October 27 | TBA | Worksheet 16 | Solutions|
-| Thursday, October 29 | TBA | Worksheet 17 | Solutions |
-| Tuesday, November 3 🗳️Go Vote!🗳️| TBA | Worksheet 18 | Solutions |
-| Thursday, November 5 | TBA | Worksheet 19 | Solutions |
-| Tuesday, November 10 | TBA | Worksheet 20 | Solutions |
-| Thursday, November 12 | TBA | Worksheet 21 | Solutions |
-| Tuesday, November 17 | TBA | Worksheet 22 | Solutions |
-| Thursday, November 19 | TBA | Worksheet 23 | Solutions |
-| Thursday, November 24| TBA | Worksheet 24 | Solutions |
-| Tuesday, December 1| TBA | Worksheet 25 | Solutions |
-| Thursday, December 3 | TBA | Worksheet 26 | Solutions |
-| Tuesday, December 8 | TBA | Worksheet 27 | Solutions |
-| Thursday, December 10 | TBA | Worksheet 28 | Solutions |
+| Tuesday, September 8 | 1.5 The Limit of a Function | Worksheet 2 | Solutions | 
+| Thursday, September 10 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 | Solutions  | 
+| Tuesday, September 15| 1.7 The Precise Definition of a Limit | Worksheet 4 | Solutions | 
+| Thursday, September 17| 1.8 Continuity | Worksheet 5 | Solutions |
+| Tuesday, September 22| 2.1 Derivatives and Rate of Change | Worksheet 6 | Solutions |
+| Thursday, September 24 | 2.2-3 Calculating Derivatives | Worksheet 7 | Solutions |
+| Tuesday, September 29 | 2.4 Derivatives of Trigonometric Functions | Worksheet 8 | Solutions |
+| Thursday, October 1| 2.5-6 Chain Rule and Implicit Differentiation | Worksheet 9 | Solutions |
+| Tuesday, October 6 | 2.6,8 Implicit Differentiation and Related Rates| Worksheet 10 | Solutions |
+| Thusday, October 8 | 1.5-2.5 Midterm 1 Review  | Worksheet 11 | Solutions |
+| Tuesday, October 13 | 2.8-3.1 Related Rates and Mean Value Theorem | Worksheet 12 | Solutions |
+| Thursday, October 15 | 3.3-4 Shapes of Graphs and Limits | Worksheet 13 | Solutions |
+| Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | Worksheet 14 | Solutions |
+| Thursday, October 22 | 3.7 Optimization Problems | Worksheet 15 | Solutions |
+| Tuesday, October 27 | 3.7,9 Optimization and Antiderivatives | Worksheet 16 | Solutions|
+| Thursday, October 29 | 3.9, 4.1 Antiderivatives and Areas/Distances | Worksheet 17 | Solutions |
+| Tuesday, November 3 🗳️Go Vote!🗳️| 4.2 The Definite Integral | Worksheet 18 | Solutions |
+| Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | Worksheet 19 | Solutions |
+| Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| Worksheet 20 | Solutions |
+| Thursday, November 12 | 2.6-4.2 Midterm 2 Review  | Worksheet 21 | Solutions |
+| Tuesday, November 17 | 4.5, 6.1-2 Inverse and Exponential Functions | Worksheet 22 | Solutions |
+| Thursday, November 19 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | Solutions |
+| Thursday, November 24| 6.6 Inverse Trigonmentric Functions | Worksheet 24 | Solutions |
+| Tuesday, December 1| 6.8 Indeterminate Forms and L'Hospital's Rule | Worksheet 25 | Solutions |
+| Thursday, December 3 | 5.1 Areas Between Curves and Volumes | Worksheet 26 | Solutions |
+| Tuesday, December 8 | 5.2 Volumes and Final Review | Worksheet 27 | Solutions |
+| Thursday, December 10 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 28 | Solutions |
 
 
 ## Resources
