--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -32,7 +32,7 @@ I intend to run everything via Zoom, but am still working on the details. At the
 
 | Date | Topic | Worksheet |  Solutions |
 | :--------- | :---------  | :-----  | :---- |
-| Thursday, September 3   | Precalculus Review | Worksheet 1 | Solutions  | 
+| Thursday, September 3   | Precalculus Review | [Worksheet 1](Worksheets/WS1_Sep3.pdf) | [Solutions](Worksheets/WS1_Sep3sol.pdf)  | 
 | Tuesday, September 8 | 1.5 The Limit of a Function | Worksheet 2 | Solutions | 
 | Thursday, September 10 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 | Solutions  | 
 | Tuesday, September 15| 1.7 The Precise Definition of a Limit | Worksheet 4 | Solutions | 
