--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -8,7 +8,7 @@ class: class
 # MATH 221: Calculus and Analytic Geometry I (DISC 429 and 431)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  3:30-4:30 PM Thursdays and 1:15-2:15 PM on Fridays (CST)
+#### **Office Hours:**  3:30-4:30 PM Thursdays and 1:15-2:15 PM Fridays (CST)
 
 ## Essential Information
 
@@ -33,7 +33,7 @@ I intend to run everything via Zoom, but am still working on the details. At the
 | Date | Topic | Worksheet |  Solutions |
 | :--------- | :---------  | :-----  | :---- |
 | Thursday, September 3   | Precalculus Review | [Worksheet 1](Worksheets/WS1_Sep3.pdf) | [Solutions](Worksheets/WS1_Sep3sol.pdf)  | 
-| Tuesday, September 8 | 1.5 The Limit of a Function | Worksheet 2 | Solutions | 
+| Tuesday, September 8 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/WS2_Sep8.pdf) | [Solutions](Worksheets/WS2_Sep8sol.pdf) | 
 | Thursday, September 10 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 | Solutions  | 
 | Tuesday, September 15| 1.7 The Precise Definition of a Limit | Worksheet 4 | Solutions | 
 | Thursday, September 17| 1.8 Continuity | Worksheet 5 | Solutions |
