update office hours

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -14,7 +14,7 @@ class: class
 
 The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/212363). When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/ked7uy10ib47n3?cid=5#) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue.
 
-I intend to run everything via Zoom, but am still working on the details. At the time of the discussion section or office hours, you can join using the button below.
+At the time of the discussion section, you can join via Zoom using the button below. Note that I will be doing my office hours in the main calculus teams room so that anyone can join. Instructions can be found [here](https://canvas.wisc.edu/courses/212363/pages/office-hours?module_item_id=2833122).
 
 <div class="button-container" style="text-align: center">
     <a href="https://www.cengage.com/c/calculus-8e-stewart/9781285740621PF/" class="button" style="margin:5px">
