--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -35,7 +35,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Thursday, September 3   | Precalculus Review | [Worksheet 1](Worksheets/WS1_Sep3.pdf) | [Solutions](Worksheets/WS1_Sep3sol.pdf)  | 
 | Tuesday, September 8 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/WS2_Sep8.pdf) | [Solutions](Worksheets/WS2_Sep8sol.pdf) | 
 | Thursday, September 10 | 1.6 Calculating Limits Using the Limit Laws | [Worksheet 3](Worksheets/WS3_Sep10 blank.pdf) | [Solutions](Worksheets/WS3_Sep10 solved.pdf)  | 
-| Tuesday, September 15| 1.7 The Precise Definition of a Limit | [Worksheet 4](Worksheets/WS4_Sep15.pdf) | Solutions | 
+| Tuesday, September 15| 1.7 The Precise Definition of a Limit | [Worksheet 4](Worksheets/WS4_Sep15.pdf) | [Solutions](Worksheets/WS4_Sep15 solved.pdf) | 
 | Thursday, September 17| 1.8 Continuity | Worksheet 5 | Solutions |
 | Tuesday, September 22| 2.1 Derivatives and Rate of Change | Worksheet 6 | Solutions |
 | Thursday, September 24 | 2.2-3 Calculating Derivatives | Worksheet 7 | Solutions |
