--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -36,7 +36,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, September 8 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/WS2_Sep8.pdf) | [Solutions](Worksheets/WS2_Sep8sol.pdf) | 
 | Thursday, September 10 | 1.6 Calculating Limits Using the Limit Laws | [Worksheet 3](Worksheets/WS3_Sep10 blank.pdf) | [Solutions](Worksheets/WS3_Sep10 solved.pdf)  | 
 | Tuesday, September 15 | 1.7 The Precise Definition of a Limit | [Worksheet 4](Worksheets/WS4_Sep15.pdf) | [Solutions](Worksheets/WS4_Sep15 solved.pdf) | 
-| Thursday, September 17| 1.8 Continuity | Worksheet 5 | Solutions |
+| Thursday, September 17| 1.8 Continuity | [Worksheet 5](Worksheets/WS5_Sep17.pdf) | Solutions |
 | Tuesday, September 22| 2.1 Derivatives and Rate of Change | Worksheet 6 | Solutions |
 | Thursday, September 24 | 2.2-3 Calculating Derivatives | Worksheet 7 | Solutions |
 | Tuesday, September 29 | 2.4 Derivatives of Trigonometric Functions | Worksheet 8 | Solutions |
