--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -39,7 +39,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Thursday, September 17| 1.8 Continuity | [Worksheet 5](Worksheets/WS5_Sep17.pdf) | [Solutions](Worksheets/WS5_Sep17 solved.pdf) |
 | Tuesday, September 22| 2.1-2 Derivatives and Rate of Change | [Worksheet 6](Worksheets/WS6_Sep22.pdf) | [Solutions](Worksheets/WS6_Sep22 solved.pdf) |
 | Thursday, September 24 | 2.3 Differentiation Formulas | [Worksheet 7](Worksheets/WS7_Sep24.pdf) | [Solutions](Worksheets/WS7_Sep24 solved.pdf) |
-| Tuesday, September 29 | 2.4 Derivatives of Trigonometric Functions | [Worksheet 8](Worksheets/WS8_Sep29.pdf) | Solutions |
+| Tuesday, September 29 | 2.4 Derivatives of Trigonometric Functions | [Worksheet 8](Worksheets/WS8_Sep29.pdf) | [Solutions](Worksheets/WS8_Sep29 solved.pdf) |
 | Thursday, October 1| 2.5-6 Chain Rule and Implicit Differentiation | Worksheet 9 | Solutions |
 | Tuesday, October 6 | 2.6,8 Implicit Differentiation and Related Rates| Worksheet 10 | Solutions |
 | Thusday, October 8 | 1.5-2.5 Midterm 1 Review  | Worksheet 11 | Solutions |
