--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -42,7 +42,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, September 29 | 2.4 Derivatives of Trigonometric Functions | [Worksheet 8](Worksheets/WS8_Sep29.pdf) | [Solutions](Worksheets/WS8_Sep29 solved.pdf) |
 | Thursday, October 1| 2.5-6 Chain Rule and Implicit Differentiation | [Worksheet 9](Worksheets/WS9_Oct1.pdf) | [Solutions](Worksheets/WS9_Oct1 solved.pdf) |
 | Tuesday, October 6 | 2.6,8 Implicit Differentiation and Related Rates| [Worksheet 10](Worksheets/WS10_Oct6.pdf) | [Solutions](Worksheets/WS10_Oct6 solved.pdf) |
-| Thusday, October 8 | 1.5-2.5 Midterm 1 Review  | Worksheet 11 | Solutions |
+| Thusday, October 8 | 1.5-2.5 Midterm 1 Review  | [Worksheet 11](Worksheets/WS11_Oct8.pdf) | Solutions |
 | Tuesday, October 13 | 2.8-3.1 Related Rates and Mean Value Theorem | Worksheet 12 | Solutions |
 | Thursday, October 15 | 3.3-4 Shapes of Graphs and Limits | Worksheet 13 | Solutions |
 | Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | Worksheet 14 | Solutions |
