--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -42,7 +42,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, September 29 | 2.4-5 Trigonometric Functions & Chain Rule | [Worksheet 8](Worksheets/WS8_Sep29.pdf) | [Solutions](Worksheets/WS8_Sep29 solved.pdf) |
 | Thursday, October 1| 2.6 Implicit Differentiation | [Worksheet 9](Worksheets/WS9_Oct1.pdf) | [Solutions](Worksheets/WS9_Oct1 solved.pdf) |
 | Tuesday, October 6 | 2.8 Related Rates| [Worksheet 10](Worksheets/WS10_Oct6.pdf) | [Solutions](Worksheets/WS10_Oct6 solved.pdf) |
-| Thusday, October 8 | 3.1 Maximum and Minimum Values  | [Worksheet 11](Worksheets/WS11_Oct8.pdf) | Solutions |
+| Thusday, October 8 | 3.1 Maximum and Minimum Values  | [Worksheet 11](Worksheets/WS11_Oct8.pdf) | [Solutions](Worksheets/WS11_Oct8 solved.pdf) |
 | Tuesday, October 13 | 3.3 Shapes of Graphs | Worksheet 12 | Solutions |
 | Thursday, October 15 | 3.3-4 Shapes of Graphs and Limits | Worksheet 13 | Solutions |
 | Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | Worksheet 14 | Solutions |
