upload worksheet 14 solutions

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -45,7 +45,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Thusday, October 8 | 3.1 Maximum and Minimum Values  | [Worksheet 11](Worksheets/WS11_Oct8.pdf) | [Solutions](Worksheets/WS11_Oct8 solved.pdf) |
 | Tuesday, October 13 | 3.2-3 Shapes of Graphs | [Worksheet 12](Worksheets/WS12_Oct13.pdf) | [Solutions](Worksheets/WS12_Oct13 solved.pdf) |
 | Thursday, October 15 | 3.3-4 Shapes of Graphs and Limits | [Worksheet 13](Worksheets/WS13_Oct15.pdf) | [Solutions](Worksheets/WS13_Oct15 solved.pdf) |
-| Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | [Worksheet 14](Worksheets/WS14_Oct20.pdf) | Solutions |
+| Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | [Worksheet 14](Worksheets/WS14_Oct20.pdf) | [Solutions](Worksheets/WS14_Oct20 solved.pdf) |
 | Thursday, October 22 | 3.7 Optimization Problems | Worksheet 15 | Solutions |
 | Tuesday, October 27 | 3.7,9 Optimization and Antiderivatives | Worksheet 16 | Solutions|
 | Thursday, October 29 | 3.9, 4.1 Antiderivatives and Areas/Distances | Worksheet 17 | Solutions |
