--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -47,7 +47,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Thursday, October 15 | 3.3-4 Shapes of Graphs and Limits | [Worksheet 13](Worksheets/WS13_Oct15.pdf) | [Solutions](Worksheets/WS13_Oct15 solved.pdf) |
 | Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | [Worksheet 14](Worksheets/WS14_Oct20.pdf) | [Solutions](Worksheets/WS14_Oct20 solved.pdf) |
 | Thursday, October 22 | 3.7 Optimization Problems | [Worksheet 15](Worksheets/WS15_Oct22.pdf) | [Solutions](Worksheets/WS15_Oct22 solved.pdf) |
-| Tuesday, October 27 | 3.7,9 Optimization and Antiderivatives | Worksheet 16 | Solutions|
+| Tuesday, October 27 | 3.7,9 Optimization and Antiderivatives | [Worksheet 16](Worksheets/WS16_Oct27.pdf) | Solutions|
 | Thursday, October 29 | 3.9, 4.1 Antiderivatives and Areas/Distances | Worksheet 17 | Solutions |
 | Tuesday, November 3 🗳️Go Vote!🗳️| 4.2 The Definite Integral | Worksheet 18 | Solutions |
 | Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | Worksheet 19 | Solutions |
