--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -48,7 +48,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, October 20 | 3.4-5 More Curvy Graphs and Limits | [Worksheet 14](Worksheets/WS14_Oct20.pdf) | [Solutions](Worksheets/WS14_Oct20 solved.pdf) |
 | Thursday, October 22 | 3.7 Optimization Problems | [Worksheet 15](Worksheets/WS15_Oct22.pdf) | [Solutions](Worksheets/WS15_Oct22 solved.pdf) |
 | Tuesday, October 27 | 3.7,9 Optimization and Antiderivatives | [Worksheet 16](Worksheets/WS16_Oct27.pdf) | [Solutions](Worksheets/WS16_Oct27 solved.pdf)|
-| Thursday, October 29 | 3.9, 4.1 Antiderivatives and Areas/Distances | [Worksheet 17](Worksheets/WS17_Oct29.pdf) | Solutions |
+| Thursday, October 29 | 3.9, 4.1 Antiderivatives and Areas/Distances | [Worksheet 17](Worksheets/WS17_Oct29.pdf) | [Solutions](Worksheets/WS17_Oct29 solved.pdf) |
 | Tuesday, November 3 🗳️Go Vote!🗳️| 4.2 The Definite Integral | Worksheet 18 | Solutions |
 | Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | Worksheet 19 | Solutions |
 | Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| Worksheet 20 | Solutions |
