--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -50,7 +50,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, October 27 | 3.7,9 Optimization and Antiderivatives | [Worksheet 16](Worksheets/WS16_Oct27.pdf) | [Solutions](Worksheets/WS16_Oct27 solved.pdf)|
 | Thursday, October 29 | 3.9, 4.1 Antiderivatives and Areas/Distances | [Worksheet 17](Worksheets/WS17_Oct29.pdf) | [Solutions](Worksheets/WS17_Oct29 solved.pdf) |
 | Tuesday, November 3 🗳️Go Vote!🗳️| 4.2 The Definite Integral | [Worksheet 18](Worksheets/WS18_Nov3.pdf) | [Solutions](Worksheets/WS18_Nov3 solved.pdf) |
-| Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 19](Worksheets/WS19_Nov5.pdf) | Solutions |
+| Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 19](Worksheets/WS19_Nov5.pdf) | [Solutions](Worksheets/WS19_Nov5 solved.pdf) |
 | Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| Worksheet 20 | Solutions |
 | Thursday, November 12 | 2.6-4.2 Midterm 2 Review  | Worksheet 21 | Solutions |
 | Tuesday, November 17 | 4.5, 6.1-2 Inverse and Exponential Functions | Worksheet 22 | Solutions |
