--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -52,8 +52,8 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, November 3 🗳️Go Vote!🗳️| 4.2 The Definite Integral | [Worksheet 18](Worksheets/WS18_Nov3.pdf) | [Solutions](Worksheets/WS18_Nov3 solved.pdf) |
 | Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 19](Worksheets/WS19_Nov5.pdf) | [Solutions](Worksheets/WS19_Nov5 solved.pdf) |
 | Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| [Worksheet 20](Worksheets/WS20_Nov10.pdf) | [Solutions](Worksheets/WS20_Nov10 solved.pdf) |
-| Thursday, November 12 | 2.6-4.2 Midterm 2 Review  | Worksheet 21 | Solutions |
-| Tuesday, November 17 | 4.5, 6.1-2 Inverse and Exponential Functions | Worksheet 22 | Solutions |
+| Thursday, November 12 | 6.1-2 Inverse and Exponential Functions | [Worksheet 21](Worksheets/WS21_Nov12.pdf) | Solutions |
+| Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 22 | Solutions |
 | Thursday, November 19 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | Solutions |
 | Thursday, November 24| 6.6 Inverse Trigonmentric Functions | Worksheet 24 | Solutions |
 | Tuesday, December 1| 6.8 Indeterminate Forms and L'Hospital's Rule | Worksheet 25 | Solutions |
