--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -53,7 +53,7 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 19](Worksheets/WS19_Nov5.pdf) | [Solutions](Worksheets/WS19_Nov5 solved.pdf) |
 | Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| [Worksheet 20](Worksheets/WS20_Nov10.pdf) | [Solutions](Worksheets/WS20_Nov10 solved.pdf) |
 | Thursday, November 12 | 6.1-2 Inverse and Exponential Functions | [Worksheet 21](Worksheets/WS21_Nov12.pdf) | [Solutions](Worksheets/WS21_Nov12 solved.pdf) |
-| Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 22](Worksheets/WS22_Nov17.pdf) | Solutions |
+| Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 22](Worksheets/WS22_Nov17.pdf) | [Solutions](Worksheets/WS22_Nov17 solved.pdf) |
 | Thursday, November 19 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | Solutions |
 | Thursday, November 24| 6.6 Inverse Trigonmentric Functions | Worksheet 24 | Solutions |
 | Tuesday, December 1| 6.8 Indeterminate Forms and L'Hospital's Rule | Worksheet 25 | Solutions |
@@ -75,24 +75,3 @@ It is okay if you get confused. Luckily for us, there are many great resources f
 - Need some more math help? See the department page for [tutoring and learning options](https://www.math.wisc.edu/undergraduate/tutoring).
   - In particular, consider going to [Mathlab](https://www.math.wisc.edu/undergraduate/mathlab)!
 - Need math major advising? See the department page for [advising](https://www.math.wisc.edu/undergraduate/advising).
-
- 
-## Email List {#email-list}
-
-Below you can see a history of previous announcements that are not discussion section specific.
-
-<iframe id="forum_embed"
-  allowtransparency="true" 
-  style="background: #f8f8f8;"
-  src="javascript:void(0)"
-  scrolling="no"
-  frameborder="0"
-  width="900"
-  height="700">
-</iframe>
-<script type="text/javascript">
-  document.getElementById('forum_embed').src =
-     'https://groups.google.com/a/g-groups.wisc.edu/forum/embed/?place=forum/math221-429and431-f20'
-     + '&showsearch=true&showpopout=true&showtabs=false'
-     + '&parenturl=' + encodeURIComponent(window.location.href);
-</script>
