--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -53,9 +53,9 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Thursday, November 5 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 19](Worksheets/WS19_Nov5.pdf) | [Solutions](Worksheets/WS19_Nov5 solved.pdf) |
 | Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| [Worksheet 20](Worksheets/WS20_Nov10.pdf) | [Solutions](Worksheets/WS20_Nov10 solved.pdf) |
 | Thursday, November 12 | 6.1-2 Inverse and Exponential Functions | [Worksheet 21](Worksheets/WS21_Nov12.pdf) | [Solutions](Worksheets/WS21_Nov12 solved.pdf) |
-| Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 22](Worksheets/WS22_Nov17.pdf) | [Solutions](Worksheets/WS22_Nov17 solved.pdf) |
-| Thursday, November 19 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | Solutions |
-| Thursday, November 24| 6.6 Inverse Trigonmentric Functions | Worksheet 24 | Solutions |
+| Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 22](Worksheets/WS22_Nov17.pdf) | Solutions |
+| Thursday, November 19 | 6.4,6 Logarithmic and Inverse Trigonmetric Functions  | [Worksheet 23](WS23_Nov19.pdf) | Solutions |
+| Thursday, November 24| 6.6 Inverse Trigonmetric Functions | Worksheet 24 | Solutions |
 | Tuesday, December 1| 6.8 Indeterminate Forms and L'Hospital's Rule | Worksheet 25 | Solutions |
 | Thursday, December 3 | 5.1 Areas Between Curves and Volumes | Worksheet 26 | Solutions |
 | Tuesday, December 8 | 5.2 Volumes and Final Review | Worksheet 27 | Solutions |
