upload WS 23 solutions and 24

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -54,11 +54,11 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule| [Worksheet 20](Worksheets/WS20_Nov10.pdf) | [Solutions](Worksheets/WS20_Nov10 solved.pdf) |
 | Thursday, November 12 | 6.1-2 Inverse and Exponential Functions | [Worksheet 21](Worksheets/WS21_Nov12.pdf) | [Solutions](Worksheets/WS21_Nov12 solved.pdf) |
 | Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 22](Worksheets/WS22_Nov17.pdf) | [Solutions](Worksheets/WS22_Nov17 solved.pdf) |
-| Thursday, November 24| 6.6 Inverse Trigonmetric Functions | [Worksheet 24](Worksheets/WS23_Nov24.pdf) | Solutions |
-| Tuesday, December 1| 6.8 Indeterminate Forms and L'Hospital's Rule | Worksheet 25 | Solutions |
-| Thursday, December 3 | 5.1 Areas Between Curves and Volumes | Worksheet 26 | Solutions |
-| Tuesday, December 8 | 5.2 Volumes and Final Review | Worksheet 27 | Solutions |
-| Thursday, December 10 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 28 | Solutions |
+| Thursday, November 24| 6.6 Inverse Trigonmetric Functions | [Worksheet 23](Worksheets/WS23_Nov24.pdf) | [Solutions](Worksheets/WS23_Nov24 solved.pdf) |
+| Tuesday, December 1| 6.8 Indeterminate Forms and L'Hospital's Rule | [Worksheet 24](Worksheets/WS24_Dec1.pdf) | Solutions |
+| Thursday, December 3 | 5.1 Areas Between Curves and Volumes | Worksheet 25 | Solutions |
+| Tuesday, December 8 | 5.2 Volumes and Final Review | Worksheet 26 | Solutions |
+| Thursday, December 10 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 27 | Solutions |
 
 
 ## Resources
