--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -56,8 +56,8 @@ At the time of the discussion section, you can join via Zoom using the button be
 | Tuesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 22](Worksheets/WS22_Nov17.pdf) | [Solutions](Worksheets/WS22_Nov17 solved.pdf) |
 | Thursday, November 24| 6.6 Inverse Trigonmetric Functions | [Worksheet 23](Worksheets/WS23_Nov24.pdf) | [Solutions](Worksheets/WS23_Nov24 solved.pdf) |
 | Tuesday, December 1| 6.8 L'Hospital's Rule and 5.1 Areas Between Curves | [Worksheet 24](Worksheets/WS24_Dec1.pdf) | [Solutions](Worksheets/WS24_Dec1 solved.pdf) |
-| Thursday, December 3 | 5.1 Areas Between Curves and Volumes | [Worksheet 25](Worksheets/WS25_Dec3.pdf) | Solutions |
-| Tuesday, December 8 | 5.2 Volumes and Final Review | Worksheet 26 | Solutions |
+| Thursday, December 3 | 5.1 Areas Between Curves | [Worksheet 25](Worksheets/WS25_Dec3.pdf) | [Solutions](Worksheets/WS25_Dec3 solved.pdf) |
+| Tuesday, December 8 | 5.2 Volumes | Worksheet 26 | Solutions |
 | Thursday, December 10 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 27 | Solutions |
 
 
