put in office hours location

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -8,7 +8,7 @@ class: class
 # MATH 221: Calculus and Analytic Geometry I (DISC 341 and 344)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  10:00-11:00 AM Tuesday and 1:00-2:00 PM Thursday (CST)
+#### **Office Hours:**  10:00-11:00 AM Tuesday and 1:00-2:00 PM Thursday (CST) in Van Vleck B224 Workstation 1
 
 ## Essential Information
 
