add anonymous feedback

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -8,16 +8,22 @@ class: class
 # MATH 221: Calculus and Analytic Geometry I (DISC 341 and 344)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  10:00-11:00 AM Tuesday and 1:00-2:00 PM Thursday (CST) in Van Vleck B224 Workstation 1
+#### **Office Hours:**  9:00-11:00 AM at the Terrace, outside or inside Der Rathskeller
 
 ## Essential Information
 
 The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/261730). When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/kt4qkk7ybq74jg) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue.
 
+If you'd like to offer anonymous feedback to me, click the button below.
+
 <div class="button-container" style="text-align: center">
     <a href="https://www.cengage.com/c/calculus-8e-stewart/9781285740621PF/" class="button" style="margin:5px">
     <i class="fas fa-book"></i>
     Book
+    </a>
+    <a href="https://forms.gle/vWJiy4654gcWQoDA8" class="button" style="margin:5px">
+    <i class="fas fa-comment"></i>
+    Feedback
     </a>
 </div>
 
@@ -26,7 +32,7 @@ The central location for all course-related information (schedule, homework, syl
 
 | Date | Topic | Worksheet |  Solutions |
 | :--------- | :---------  | :-----  | :---- |
-| Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/WS1_Sep8.pdf) |  | 
+| Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/WS1_Sep8.pdf) | [Solutions](Worksheets/WS1_Sep8sol.pdf) | 
 | Monday, September 13 | 1.5 The Limit of a Function | Worksheet 2 |  | 
 | Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 |  | 
 | Monday, September 20 | 1.7 The Precise Definition of a Limit | Worksheet 4 |  | 
