--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -74,6 +74,6 @@ It is okay if you get confused. Luckily for us, there are many great resources f
 - [Professor Leonard](https://www.youtube.com/channel/UCoHhuummRZaIVX7bD4t2czg) basically taught me all of Calculus 3. He also inspires me to work out. Seriously, check him out.
 - [WolframAlpha](https://www.wolframalpha.com/) can compute answers to essentially any calculus query that you enter, although the free version will not provide worked out solutions. Fortunately, UW Madison provides [a license to Mathematica](https://software.wisc.edu/cgi-bin/ssl/csl_download.cgi) which properly contains WolframAlpha.
 - Feel free to go to the [TA office hours](https://canvas.wisc.edu/courses/212363/pages/office-hours?module_item_id=2833122) of anyone available, not just mine!
-- Need some more math help? See the department page for [tutoring and learning options](https://www.math.wisc.edu/undergraduate/tutoring).
+- Need some more math help? See the department page for [tutoring and learning options](https://math.wisc.edu/undergraduate/mlc/).
   - In particular, consider going to [Mathlab](https://www.math.wisc.edu/undergraduate/mathlab)!
 - Need math major advising? See the department page for [advising](https://www.math.wisc.edu/undergraduate/advising).
