--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -12,7 +12,9 @@ class: class
 
 ## Essential Information
 
-The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/261730). When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/kt4qkk7ybq74jg) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue.
+The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/261730). We have quizzes every Wednesday based on the material of Thursday's lecture -- this is worth 4% of your final grade.
+
+When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/kt4qkk7ybq74jg) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue. 
 
 If you'd like to offer anonymous feedback to me, click the button below.
 
@@ -32,8 +34,8 @@ If you'd like to offer anonymous feedback to me, click the button below.
 
 | Date | Topic | Worksheet |  Solutions |
 | :--------- | :---------  | :-----  | :---- |
-| Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/WS1_Sep8.pdf) | [Solutions](Worksheets/WS1_Sep8sol.pdf) | 
-| Monday, September 13 | 1.5 The Limit of a Function | Worksheet 2 |  | 
+| Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/221-Wk1.1-Precalc.pdf) | [Solutions](Worksheets/221-Wk1.1-Precalcsolns.pdf) | 
+| Monday, September 13 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/221-Wk1.2-Sec1.5.pdf) |  | 
 | Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 |  | 
 | Monday, September 20 | 1.7 The Precise Definition of a Limit | Worksheet 4 |  | 
 | Wednesday, September 22 | 1.8 Continuity | Worksheet 5 |  |
