--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -35,7 +35,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Date | Topic | Worksheet |  Solutions |
 | :--------- | :---------  | :-----  | :---- |
 | Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/221-Wk1.1-Precalc.pdf) | [Solutions](Worksheets/221-Wk1.1-Precalcsolns.pdf) | 
-| Monday, September 13 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/221-Wk1.2-Sec1.5.pdf) |  | 
+| Monday, September 13 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/221-Wk1.2-Sec1.5.pdf) | [Solutions](Worksheets/221-Wk1.2-Sec1.5solns.pdf)  | 
 | Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 |  | 
 | Monday, September 20 | 1.7 The Precise Definition of a Limit | Worksheet 4 |  | 
 | Wednesday, September 22 | 1.8 Continuity | Worksheet 5 |  |
