--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -36,7 +36,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | :--------- | :---------  | :-----  | :---- |
 | Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/221-Wk1.1-Precalc.pdf) | [Solutions](Worksheets/221-Wk1.1-Precalcsolns.pdf) | 
 | Monday, September 13 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/221-Wk1.2-Sec1.5.pdf) | [Solutions](Worksheets/221-Wk1.2-Sec1.5solns.pdf)  | 
-| Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | Worksheet 3 |  | 
+| Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | [Worksheet 3](Worksheets/221-Wk2.1-Sec1.6.pdf) | [Solutions](Worksheets/221-Wk2.1-Sec1.6solns.pdf)  | 
 | Monday, September 20 | 1.7 The Precise Definition of a Limit | Worksheet 4 |  | 
 | Wednesday, September 22 | 1.8 Continuity | Worksheet 5 |  |
 | Monday, September 27| 2.1-2 Derivatives and Rate of Change | Worksheet 6 |  |
@@ -64,6 +64,26 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, December 13 | N/A | Worksheet 28 |  |
 | Wednesday, December 15 | N/A | Worksheet 29 |  |
 | | Final Review |   |
+
+
+## Quizzes
+
+| Date | Quiz | Solutions |
+| :--------- | :-----  | :---- |
+| Wednesday, September 15 |  [Quiz 1](/Quizzes/Quiz_1.pdf) | [Solutions](/Quizzes/Quiz_1_Solution.pdf)  | 
+| Wednesday, September 22 |  Quiz 2 |  |
+| Wednesday, September 29 |  Quiz 3 |  |
+| Wednesday, October 6 |  Quiz 4 |  |
+| Wednesday, October 13  | Quiz 5 |  |
+| Wednesday, October 20 |  Quiz 5 |  |
+| Wednesday, October 27 |  Quiz 6 |  |
+| Wednesday, November 3 |  Quiz 7 |  |
+| Wednesday, November 10 |  Quiz 8 |  |
+| Wednesday, November 17 |  Quiz 9 |  |
+| Wednesday, November 24 |  Quiz 10  |
+| Wednesday, December 1 |  Quiz 11 |  |
+| Wednesday, December 8 |  Quiz 12 |
+| Wednesday, December 15 | Quiz 13 |  |
 
 
 ## Resources
