--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -37,7 +37,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, September 8   | Precalculus Review | [Worksheet 1](Worksheets/221-Wk1.1-Precalc.pdf) | [Solutions](Worksheets/221-Wk1.1-Precalcsolns.pdf) | 
 | Monday, September 13 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/221-Wk1.2-Sec1.5.pdf) | [Solutions](Worksheets/221-Wk1.2-Sec1.5solns.pdf)  | 
 | Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | [Worksheet 3](Worksheets/221-Wk2.1-Sec1.6.pdf) | [Solutions](Worksheets/221-Wk2.1-Sec1.6solns.pdf)  | 
-| Monday, September 20 | 1.7 The Precise Definition of a Limit | Worksheet 4 |  | 
+| Monday, September 20 | 1.7 The Precise Definition of a Limit | [Worksheet 4](Worksheets/221-Wk2.2-Sec1.7.pdf) | [Solutions](Worksheets/221-Wk2.2-Sec1.7solns.pdf)  | 
 | Wednesday, September 22 | 1.8 Continuity | Worksheet 5 |  |
 | Monday, September 27| 2.1-2 Derivatives and Rate of Change | Worksheet 6 |  |
 | Wednesday, September 29 | 2.3 Differentiation Formulas | Worksheet 7 |  |
