office hours update again

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -8,7 +8,7 @@ class: class
 # MATH 221: Calculus and Analytic Geometry I (DISC 341 and 344)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  9:00-11:00 AM Tuesdays at the Terrace, outside or in the "Paul Bunyon" room across from Der Rathskeller
+#### **Office Hours:**  9:00-11:00 AM Tuesdays at Workstation 1, Van Vleck B224
 
 ## Essential Information
 
