Fix office hours

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -8,7 +8,7 @@ class: class
 # MATH 221: Calculus and Analytic Geometry I (DISC 341 and 344)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  9:00-11:00 AM Tuesdays at Workstation 1, Van Vleck B224
+#### **Office Hours:**  9:00-10:00 AM Tuesdays and Thursdays at Workstation 1, Van Vleck B224
 
 ## Essential Information
 
@@ -38,7 +38,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, September 13 | 1.5 The Limit of a Function | [Worksheet 2](Worksheets/221-Wk1.2-Sec1.5.pdf) | [Solutions](Worksheets/221-Wk1.2-Sec1.5solns.pdf)  | 
 | Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | [Worksheet 3](Worksheets/221-Wk2.1-Sec1.6.pdf) | [Solutions](Worksheets/221-Wk2.1-Sec1.6solns.pdf)  | 
 | Monday, September 20 | 1.7 The Precise Definition of a Limit | [Worksheet 4](Worksheets/221-Wk2.2-Sec1.7.pdf) | [Solutions](Worksheets/221-Wk2.2-Sec1.7solns.pdf)  | 
-| Wednesday, September 22 | 1.8 Continuity | Worksheet 5 |  |
+| Wednesday, September 22 | 1.8 Continuity | [Worksheet 5](221-Wk3.1-Sec1.8.pdf) | [Solutions](221-Wk3.1-Sec1.8solns.pdf)  |
 | Monday, September 27| 2.1-2 Derivatives and Rate of Change | Worksheet 6 |  |
 | Wednesday, September 29 | 2.3 Differentiation Formulas | Worksheet 7 |  |
 | Monday, September 4 | 2.4-5 Trigonometric Functions & Chain Rule | Worksheet 8 | |
@@ -71,7 +71,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Date | Quiz | Solutions |
 | :--------- | :-----  | :---- |
 | Wednesday, September 15 |  [Quiz 1](/Quizzes/Quiz_1.pdf) | [Solutions](/Quizzes/Quiz_1_Solution.pdf)  | 
-| Wednesday, September 22 |  Quiz 2 |  |
+| Wednesday, September 22 |  [Quiz 2](/Quizzes/Quiz_2.png) | [Solutions](/Quizzes/Quiz_2_Solution.pdf)  |
 | Wednesday, September 29 |  Quiz 3 |  |
 | Wednesday, October 6 |  Quiz 4 |  |
 | Wednesday, October 13  | Quiz 5 |  |
