New worksheet solutions

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -39,8 +39,8 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, September 15 | 1.6 Calculating Limits Using the Limit Laws | [Worksheet 3](Worksheets/221-Wk2.1-Sec1.6.pdf) | [Solutions](Worksheets/221-Wk2.1-Sec1.6solns.pdf)  | 
 | Monday, September 20 | 1.7 The Precise Definition of a Limit | [Worksheet 4](Worksheets/221-Wk2.2-Sec1.7.pdf) | [Solutions](Worksheets/221-Wk2.2-Sec1.7solns.pdf)  | 
 | Wednesday, September 22 | 1.8 Continuity | [Worksheet 5](Worksheets/221-Wk3.1-Sec1.8.pdf) | [Solutions](Worksheets/221-Wk3.1-Sec1.8solns.pdf)  |
-| Monday, September 27| 2.1-2 Derivatives and Rate of Change | [Worksheet 6](Worksheets/221-Wk3.2-Sec2.1.pdf) | [Solutions](Worksheets/221-Wk3.2-Sec2.1solns.pdf) | 
-| Wednesday, September 29 | 2.3 Differentiation Formulas | Worksheet 7 |  |
+| Monday, September 27| 2.1 Derivatives and Rate of Change | [Worksheet 6](Worksheets/221-Wk3.2-Sec2.1.pdf) | [Solutions](Worksheets/221-Wk3.2-Sec2.1solns.pdf) | 
+| Wednesday, September 29 | 2.2-3 Differentiation Formulas | [Worksheet 7](221-Wk4.1-Sec2.2and2.3.pdf) | [Solutions](221-Wk4.1-Sec2.2and2.3solns.pdf) |
 | Monday, September 4 | 2.4-5 Trigonometric Functions & Chain Rule | Worksheet 8 | |
 | Wednesday, October 6 | 2.6 Implicit Differentiation | Worksheet 9 |  |
 | Monday, October 11 | 2.8 Related Rates| Worksheet 10 | |
