--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -41,27 +41,27 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, September 22 | 1.8 Continuity | [Worksheet 5](Worksheets/221-Wk3.1-Sec1.8.pdf) | [Solutions](Worksheets/221-Wk3.1-Sec1.8solns.pdf)  |
 | Monday, September 27| 2.1 Derivatives and Rate of Change | [Worksheet 6](Worksheets/221-Wk3.2-Sec2.1.pdf) | [Solutions](Worksheets/221-Wk3.2-Sec2.1solns.pdf) | 
 | Wednesday, September 29 | 2.2-3 Differentiation Formulas | [Worksheet 7](221-Wk4.1-Sec2.2and2.3.pdf) | [Solutions](221-Wk4.1-Sec2.2and2.3solns.pdf) |
-| Monday, September 4 | 2.4-5 Trigonometric Functions & Chain Rule | Worksheet 8 | |
-| Wednesday, October 6 | 2.6 Implicit Differentiation | Worksheet 9 |  |
-| Monday, October 11 | 2.8 Related Rates| Worksheet 10 | |
-| Wednesday, October 13 | 3.1 Maximum and Minimum Values  | Worksheet 11 |  |
-| Monday, October 18 | 3.2-3 Shapes of Graphs | Worksheet 12 |  |
-| Wednesday, October 20 | 3.3-4 Shapes of Graphs and Limits | Worksheet 13 |  |
-| Monday, October 25 | 3.4-5 More Curvy Graphs and Limits | Worksheet 14 |  |
-| Wednesday, October 27 | 3.7 Optimization Problems | Worksheet 15 |  |
-| Monday, November 1 | 3.7,9 Optimization and Antiderivatives | Worksheet 16 | |
-| Wednesday, November 3 | 3.9, 4.1 Antiderivatives and Areas/Distances | Worksheet 17 |  |
-| Monday, November 8 | 4.2 The Definite Integral | Worksheet 18 |  |
-| Wednesday, November 10 | 4.3 The Fundamental Theorem of Calculus | Worksheet 19 |  |
-| Monday, November 15 | 4.4-5 Indefinite Integrals and Substitution Rule| Worksheet 20 |  |
-| Wednesday, November 17 | 6.1-2 Inverse and Exponential Functions | Worksheet 21 |  |
-| Monday, November 22 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 22 |  |
-| Wednesday, November 24 | 6.6 Inverse Trigonmetric Functions | Worksheet 23 | |
-| Monday, November 29 | 6.8 L'Hospital's Rule and 5.1 Areas Between Curves | Worksheet 24 |  |
-| Wednesday, December 1 | 5.1 Areas Between Curves | Worksheet 25 |  |
-| Monday, December 6 | 5.2 Volumes | Worksheet 26 |  |
-| Wednesday, December 8 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 27 |
-| Monday, December 13 | N/A | Worksheet 28 |  |
+| Monday, September 4 | 2.4-5 Trigonometric Functions & Chain Rule | [Worksheet 8](Worksheets/221-Wk4.1-Sec2.2and2.3.pdf) | [Solutions](Worksheets/221-Wk4.1-Sec2.2and2.3solns.pdf) |
+| Wednesday, October 6 | 2.6 Implicit Differentiation | [Worksheet 9](Worksheets/221-Wk5.1-Sec2.5,2.6.pdf) | [Solutions](Worksheets/221-Wk5.1-Sec2.5,2.6solns.pdf) |
+| Monday, October 11 | 2.8 Related Rates| [Worksheet 10](Worksheets/221-Wk5.2-Sec2.6,2.8.pdf) | [Solutions](Worksheets/221-Wk5.2-Sec2.6,2.8solns.pdf)|
+| Wednesday, October 13 | Midterm Review | Worksheet 11 |  |
+| Monday, October 18 | 3.1 Maximum and Minimum Values | Worksheet 12 |  |
+| Wednesday, October 20 | 3.2-3 Shapes of Graphs | Worksheet 13 |  |
+| Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | Worksheet 14 |  |
+| Wednesday, October 27 | 3.4-5 More Curvy Graphs and Limits  | Worksheet 15 |  |
+| Monday, November 1 | 3.7 Optimization Problems | Worksheet 16 | |
+| Wednesday, November 3 | 3.7,9 Optimization and Antiderivatives  | Worksheet 17 |  |
+| Monday, November 8 | 3.9, 4.1 Antiderivatives and Areas/Distances | Worksheet 18 |  |
+| Wednesday, November 10 | 4.2 The Definite Integral | Worksheet 19 |  |
+| Monday, November 15 | 4.3 The Fundamental Theorem of Calculus| Worksheet 20 |  |
+| Wednesday, November 17 | 4.4-5 Indefinite Integrals and Substitution Rule  | Worksheet 21 |  |
+| Monday, November 22 | 6.1-2 Inverse and Exponential Functions | Worksheet 22 |  |
+| Wednesday, November 24 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | |
+| Monday, November 29 | 6.6 Inverse Trigonmetric Functions | Worksheet 24 |  |
+| Wednesday, December 1 | 6.8 L'Hospital's Rule and 5.1 Areas Between Curves | Worksheet 25 |  |
+| Monday, December 6 | 5.1 Areas Between Curves | Worksheet 26 |  |
+| Wednesday, December 8 | 5.2 Volumes | Worksheet 27 |
+| Monday, December 13 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 28 |  |
 | Wednesday, December 15 | N/A | Worksheet 29 |  |
 | | Final Review |   |
 
