add quiz solutions

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -72,7 +72,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | :--------- | :-----  | :---- |
 | Wednesday, September 15 |  [Quiz 1](/Quizzes/Quiz_1.pdf) | [Solutions](/Quizzes/Quiz_1_Solution.pdf)  | 
 | Wednesday, September 22 |  [Quiz 2](/Quizzes/Quiz_2.png) | [Solutions](/Quizzes/Quiz_2_Solution.pdf)  |
-| Wednesday, September 29 |  Quiz 3 |  |
+| Wednesday, September 29 |  Quiz 3 | [Solutions](/Quizzes/Quiz_3_Solution.pdf) |
 | Wednesday, October 6 |  Quiz 4 |  |
 | Wednesday, October 13  | Quiz 5 |  |
 | Wednesday, October 20 |  Quiz 5 |  |
