midterm review solutions

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -44,7 +44,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, September 4 | 2.4-5 Trigonometric Functions & Chain Rule | [Worksheet 8](Worksheets/221-Wk4.1-Sec2.2and2.3.pdf) | [Solutions](Worksheets/221-Wk4.1-Sec2.2and2.3solns.pdf) |
 | Wednesday, October 6 | 2.6 Implicit Differentiation | [Worksheet 9](Worksheets/221-Wk5.1-Sec2.5,2.6.pdf) | [Solutions](Worksheets/221-Wk5.1-Sec2.5,2.6solns.pdf) |
 | Monday, October 11 | 2.8 Related Rates| [Worksheet 10](Worksheets/221-Wk5.2-Sec2.6,2.8.pdf) | [Solutions](Worksheets/221-Wk5.2-Sec2.6,2.8solns.pdf)|
-| Wednesday, October 13 | Midterm Review | Worksheet 11 |  |
+| Wednesday, October 13 | Midterm Review | [Worksheet 11](Worksheets/221-Wk6.1-Midterm 1 Review.pdf) | [Solutions](Worksheets/221-Wk6.1-Midterm 1 Reviewsolns.pdf) |
 | Monday, October 18 | 3.1 Maximum and Minimum Values | Worksheet 12 |  |
 | Wednesday, October 20 | 3.2-3 Shapes of Graphs | Worksheet 13 |  |
 | Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | Worksheet 14 |  |
