--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -45,9 +45,9 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, October 6 | 2.6 Implicit Differentiation | [Worksheet 9](Worksheets/221-Wk5.1-Sec2.5,2.6.pdf) | [Solutions](Worksheets/221-Wk5.1-Sec2.5,2.6solns.pdf) |
 | Monday, October 11 | 2.8 Related Rates| [Worksheet 10](Worksheets/221-Wk5.2-Sec2.6,2.8.pdf) | [Solutions](Worksheets/221-Wk5.2-Sec2.6,2.8solns.pdf)|
 | Wednesday, October 13 | Midterm Review | [Worksheet 11](Worksheets/221-Wk6.1-Midterm 1 Review.pdf) | [Solutions](Worksheets/221-Wk6.1-Midterm 1 Reviewsolns.pdf) |
-| Monday, October 18 | 3.1 Maximum and Minimum Values | Worksheet 12 |  |
-| Wednesday, October 20 | 3.2-3 Shapes of Graphs | Worksheet 13 |  |
-| Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | Worksheet 14 |  |
+| Monday, October 18 | 3.1 Maximum and Minimum Values | [Worksheet 12](Worksheets/221-Wk6.2-Sec.2.8,3.1,3.2.pdf) | [Solutions](Worksheets/221-Wk6.2-Sec.2.8,3.1,3.2solns.pdf) |
+| Wednesday, October 20 | 3.2-3 Shapes of Graphs | [Worksheet 13](Worksheets/221-Wk7.1-Sec3.3,3.4.pdf) | [Solutions](Worksheets/221-Wk7.1-Sec3.3,3.4solns.pdf) |
+| Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | [Worksheet 14](Worksheets/221-Wk7.2-Sec3.4,3.5.pdf) | [Solutions](Worksheets/221-Wk7.2-Sec3.4,3.5solns.pdf) |
 | Wednesday, October 27 | 3.4-5 More Curvy Graphs and Limits  | Worksheet 15 |  |
 | Monday, November 1 | 3.7 Optimization Problems | Worksheet 16 | |
 | Wednesday, November 3 | 3.7,9 Optimization and Antiderivatives  | Worksheet 17 |  |
