worksheets and solns

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -46,10 +46,10 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, October 11 | 2.8 Related Rates| [Worksheet 10](Worksheets/221-Wk5.2-Sec2.6,2.8.pdf) | [Solutions](Worksheets/221-Wk5.2-Sec2.6,2.8solns.pdf)|
 | Wednesday, October 13 | Midterm Review | [Worksheet 11](Worksheets/221-Wk6.1-Midterm 1 Review.pdf) | [Solutions](Worksheets/221-Wk6.1-Midterm 1 Reviewsolns.pdf) |
 | Monday, October 18 | 3.1 Maximum and Minimum Values | [Worksheet 12](Worksheets/221-Wk6.2-Sec.2.8,3.1,3.2.pdf) | [Solutions](Worksheets/221-Wk6.2-Sec.2.8,3.1,3.2solns.pdf) |
-| Wednesday, October 20 | 3.2-3 Shapes of Graphs | [Worksheet 13](Worksheets/221-Wk7.1-Sec3.3,3.4.pdf) | [Solutions](Worksheets/221-Wk7.1-Sec3.3,3.4solns.pdf) |
-| Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | [Worksheet 14](Worksheets/221-Wk7.2-Sec3.4,3.5.pdf) | [Solutions](Worksheets/221-Wk7.2-Sec3.4,3.5solns.pdf) |
-| Wednesday, October 27 | 3.4-5 More Curvy Graphs and Limits  | Worksheet 15 |  |
-| Monday, November 1 | 3.7 Optimization Problems | Worksheet 16 | |
+| Wednesday, October 20 | 3.2-3 Shapes of Graphs | [Worksheet 13](Worksheets/221-Wk6.2-Sec.2.8,3.1,3.2.pdf) | [Solutions](Worksheets/221-Wk6.2-Sec.2.8,3.1,3.2solns.pdf) |
+| Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | [Worksheet 14](Worksheets/221-Wk7.1-Sec3.3,3.4.pdf) | [Solutions](Worksheets/221-Wk7.1-Sec3.3,3.4solns.pdf) |
+| Wednesday, October 27 | 3.4-5 More Curvy Graphs and Limits  | [Worksheet 15](Worksheets/221-Wk7.2-Sec3.4,3.5.pdf) | [Solutions](Worksheets/221-Wk7.2-Sec3.4,3.5solns.pdf) |
+| Monday, November 1 | 3.7 Optimization Problems | [Worksheet 16](Worksheets/221-Wk8.1-Sec 3.7.pdf) | [Solutions](Worksheets/221-Wk8.1-Sec 3.7solns.pdf) |
 | Wednesday, November 3 | 3.7,9 Optimization and Antiderivatives  | Worksheet 17 |  |
 | Monday, November 8 | 3.9, 4.1 Antiderivatives and Areas/Distances | Worksheet 18 |  |
 | Wednesday, November 10 | 4.2 The Definite Integral | Worksheet 19 |  |
@@ -73,8 +73,8 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, September 15 |  [Quiz 1](/Quizzes/Quiz_1.pdf) | [Solutions](/Quizzes/Quiz_1_Solution.pdf)  | 
 | Wednesday, September 22 |  [Quiz 2](/Quizzes/Quiz_2.png) | [Solutions](/Quizzes/Quiz_2_Solution.pdf)  |
 | Wednesday, September 29 |  Quiz 3 | [Solutions](/Quizzes/Quiz_3_Solution.pdf) |
-| Wednesday, October 6 |  Quiz 4 |  |
-| Wednesday, October 13  | Quiz 5 |  |
+| Wednesday, October 6 |  Quiz 4 | [Solutions](/Quizzes/Quiz_4_Solution.pdf) |
+| Wednesday, October 13  | Quiz 5 | [Solutions](/Quizzes/Quiz_5_Solution.pdf) |
 | Wednesday, October 20 |  Quiz 5 |  |
 | Wednesday, October 27 |  Quiz 6 |  |
 | Wednesday, November 3 |  Quiz 7 |  |
