--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -50,9 +50,9 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, October 25 | 3.3-4 Shapes of Graphs and Limits  | [Worksheet 14](Worksheets/221-Wk7.1-Sec3.3,3.4.pdf) | [Solutions](Worksheets/221-Wk7.1-Sec3.3,3.4solns.pdf) |
 | Wednesday, October 27 | 3.4-5 More Curvy Graphs and Limits  | [Worksheet 15](Worksheets/221-Wk7.2-Sec3.4,3.5.pdf) | [Solutions](Worksheets/221-Wk7.2-Sec3.4,3.5solns.pdf) |
 | Monday, November 1 | 3.7 Optimization Problems | [Worksheet 16](Worksheets/221-Wk8.1-Sec 3.7.pdf) | [Solutions](Worksheets/221-Wk8.1-Sec 3.7solns.pdf) |
-| Wednesday, November 3 | [3.7,9 Optimization and Antiderivatives](Worksheets/221-Wk8.2-Sec3.7and3.9.pdf)  | [Worksheet 17](Worksheets/221-Wk8.2-Sec3.7and3.9solns.pdf) |  |
-| Monday, November 8 | [3.9, 4.1 Antiderivatives and Areas/Distances](Worksheets/221-Wk9.1-Sec3.9 and 4.1.pdf) | [Worksheet 18](Worksheets/221-Wk9.1-Sec3.9 and 4.1solns.pdf) |  |
-| Wednesday, November 10 | 4.2 The Definite Integral | Worksheet 19 |  |
+| Wednesday, November 3 | 3.7,9 Optimization and Antiderivatives  | [Worksheet 17](Worksheets/221-Wk8.2-Sec3.7and3.9.pdf) | [Solutions](Worksheets/221-Wk8.2-Sec3.7and3.9solns.pdf) |
+| Monday, November 8 | 3.9, 4.1 Antiderivatives and Areas/Distances | [Worksheet 18](Worksheets/221-Wk9.1-Sec3.9 and 4.1.pdf) | [Solutions](Worksheets/221-Wk9.1-Sec3.9 and 4.1solns.pdf) |
+| Wednesday, November 10 | 4.2 The Definite Integral | [Worksheet 19](Worksheets/221-Wk9.2-Sec4.2.pdf) | [Solutions](221-Wk9.2-Sec4.2solns.pdf) |
 | Monday, November 15 | 4.3 The Fundamental Theorem of Calculus| Worksheet 20 |  |
 | Wednesday, November 17 | 4.4-5 Indefinite Integrals and Substitution Rule  | Worksheet 21 |  |
 | Monday, November 22 | 6.1-2 Inverse and Exponential Functions | Worksheet 22 |  |
