--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -54,7 +54,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, November 8 | 3.9, 4.1 Antiderivatives and Areas/Distances | [Worksheet 18](Worksheets/221-Wk9.1-Sec3.9 and 4.1.pdf) | [Solutions](Worksheets/221-Wk9.1-Sec3.9 and 4.1solns.pdf) |
 | Wednesday, November 10 | 4.2 The Definite Integral | [Worksheet 19](Worksheets/221-Wk9.2-Sec4.2.pdf) | [Solutions](Worksheets/221-Wk9.2-Sec4.2solns.pdf) |
 | Monday, November 15 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 20](Worksheets/221-Wk10.1-Sec4.3.pdf) | [Solutions](Worksheets/221-Wk10.1-Sec4.3solns.pdf) |
-| Wednesday, November 17 | 4.4-5 Indefinite Integrals and Substitution Rule  | [Worksheet 21](Worksheets/221-Wk10.2-Sec4.4,4.5.pdf) | [Solutions](Worksheets/221-Wk10.2-Sec4.4,4.5solns.pdf) |
+| Wednesday, November 17 | 4.4-5 Indefinite Integrals and Substitution Rule  | [Worksheet 21](/Worksheets/221-Wk10.2-Sec4.4,4.5.pdf) | [Solutions](/Worksheets/221-Wk10.2-Sec4.4,4.5solns.pdf) |
 | Monday, November 22 | 6.1-2 Inverse and Exponential Functions | Worksheet 22 |  |
 | Wednesday, November 24 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | |
 | Monday, November 29 | 6.6 Inverse Trigonmetric Functions | Worksheet 24 |  |
