--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -56,7 +56,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, November 15 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 20](Worksheets/221-Wk10.1-Sec4.3.pdf) | [Solutions](Worksheets/221-Wk10.1-Sec4.3solns.pdf) |
 | Wednesday, November 17 | 4.4-5 Indefinite Integrals and Substitution Rule  | [Worksheet 21](Worksheets/221-Wk10.2-Sec4.4,4.5.pdf) | [Solutions](Worksheets/221-Wk10.2-Sec4.4,4.5solns.pdf) |
 | Monday, November 22 | 6.1-2 Inverse and Exponential Functions | [Worksheet 22](Worksheets/221-Wk11.2-Sec4.5, 6.1, 6.2.pdf) | [Solutions](Worksheets/221-Wk11.2-Sec4.5, 6.1, 6.2solns.pdf) |
-| Wednesday, November 24 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | |
+| Wednesday, November 24 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 23](Worksheets/221-Wk12.1-Sec6.3, 6.4.pdf) | [Solutions](Worksheets/221-Wk12.1-Sec6.3, 6.4solns.pdf) |
 | Monday, November 29 | 6.6 Inverse Trigonmetric Functions | Worksheet 24 |  |
 | Wednesday, December 1 | 6.8 L'Hospital's Rule and 5.1 Areas Between Curves | Worksheet 25 |  |
 | Monday, December 6 | 5.1 Areas Between Curves | Worksheet 26 |  |
@@ -76,7 +76,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, October 6 |  Quiz 4 | [Solutions](/Quizzes/Quiz_4_Solution.pdf) |
 | Wednesday, October 13  | Quiz 5 | [Solutions](/Quizzes/Quiz_5_Solution.pdf) |
 | Wednesday, October 20 |  Quiz 6 | [Solutions](/Quizzes/Quiz_6_Solution.pdf) |
-| Wednesday, October 27 |  Quiz 7 |  |
+| Wednesday, October 27 |  Quiz 7 | [Solutions](/Quizzes/Quiz_7_Solution.pdf) |
 | Wednesday, November 3 |  Quiz 8 |  |
 | Wednesday, November 10 |  Quiz 9 |  |
 | Wednesday, November 17 |  Quiz 10 |  |
